Add more code to prevent some impossible trading and more translatable text for the new errors

--- a/src/main/resources/assets/librarian-trade-finder/lang/de_de.json
+++ b/src/main/resources/assets/librarian-trade-finder/lang/de_de.json
@@ -5,6 +5,9 @@
   "key.librarian-trade-finder.config": "Konfigurations-Bildschirm öffnen",
   "commands.tradefinder.select.success": "Lesepult und Bibliothekar wurden ausgewählt.",
   "commands.tradefinder.start.not-selected": "Sie haben keinen Bibliothekar und kein Lesepult ausgewählt. Verwenden Sie '/tradefinder select' oder eine Tastenkombination, um das Lesepult und den Bibliothekar auszuwählen.",
+  "commands.tradefinder.start.tradeless": "Der Bibliothekar handelt nicht mit der Verzauberung \"%s\".",
+  "commands.tradefinder.start.too-less": "%s benötigt mindestens %d Smaragde, wurde aber für %d Smaragde gefunden.",
+  "commands.tradefinder.start.no-enchantment": "Die Registrierung für die Verzauberung \"%s\" kann nicht gefunden werden oder die Welt existiert nicht.",
   "commands.tradefinder.start.success-list": "Die Suche wurde begonnen.",
   "commands.tradefinder.start.success-single": "Die Suche nach %d für maximal %d Smaragde wurde begonnen.",
   "commands.tradefinder.search.no-enchantments": "Sie müssen mindestens eine Verzauberung, die gesucht werden soll, auswählen.",
