--- a/src/main/resources/assets/librarian-trade-finder/lang/en_us.json
+++ b/src/main/resources/assets/librarian-trade-finder/lang/en_us.json
@@ -5,6 +5,9 @@
   "key.librarian-trade-finder.config": "Open Config Screen",
   "commands.tradefinder.select.success": "Selected lectern and librarian.",
   "commands.tradefinder.start.not-selected": "You have not selected a librarian and lectern. Use '/tradefinder select' or keybinding to select the lectern and librarian.",
+  "commands.tradefinder.start.tradeless": "Librarian doesn't trade \"%s\" enchantment.",
+  "commands.tradefinder.start.too-less": "%s at least needs %d emeralds, but the number of the emeralds %d to found is too less.",
+  "commands.tradefinder.start.no-enchantment": "Cannot find the registry to the enchantment \"%s\" or the world does not exist.",
   "commands.tradefinder.start.success-list": "Started searching.",
   "commands.tradefinder.start.success-single": "Started searching for %d for at most %d emeralds.",
   "commands.tradefinder.search.no-enchantments": "You need to select at least one enchantment to search for.",
