--- a/src/main/resources/assets/librarian-trade-finder/lang/ru_ru.json
+++ b/src/main/resources/assets/librarian-trade-finder/lang/ru_ru.json
@@ -5,6 +5,9 @@
   "key.librarian-trade-finder.config": "Открыть меню настроек",
   "commands.tradefinder.select.success": "Кафедра и библиотекь выбран.",
   "commands.tradefinder.start.not-selected": "У вас нет выбранный кафедры и библиотекаря. Используйте '/tradefinder select' или горячую клавишу чтобы выбрать их.",
+  "commands.tradefinder.start.tradeless": "Библиотекарь не торгует чарами \"%s\".",
+  "commands.tradefinder.start.too-less": "%s по крайней мере нужны изумруды %d, но найдены для изумрудов %d.",
+  "commands.tradefinder.start.no-enchantment": "Не удается найти реестр к зачарованию \"%s\" или мир не существует.",
   "commands.tradefinder.start.success-list": "Поиск начался.",
   "commands.tradefinder.start.success-single": "Поиск %d за %d изумрудов начался.",
   "commands.tradefinder.search.no-enchantments": "Вам необходимо выбрать нужное зачарование для начала поиска.",
