--- a/src/main/resources/assets/librarian-trade-finder/lang/zh_cn.json
+++ b/src/main/resources/assets/librarian-trade-finder/lang/zh_cn.json
@@ -5,6 +5,9 @@
   "key.librarian-trade-finder.config": "打开配置页面",
   "commands.tradefinder.select.success": "已绑定讲台与图书管理员",
   "commands.tradefinder.start.not-selected": "你没有选择讲台和图书管理员。使用命令'/tradefinder select'或按键选择讲台和图书管理员。",
+  "commands.tradefinder.start.tradeless": "图书管理员不售卖“%s”魔咒。",
+  "commands.tradefinder.start.too-less": "%s至少需要%d绿宝石，但需要搜索的价格%d太少",
+  "commands.tradefinder.start.no-enchantment": "无法找到对附魔 “%s” 的注册或是世界不存在",
   "commands.tradefinder.start.success-list": "开始搜索。",
   "commands.tradefinder.start.success-single": "开始搜索 %d 最多 %d 的绿宝石。",
   "commands.tradefinder.search.no-enchantments": "至少选择一个附魔魔咒。",
